  https://www.linuxuprising.com/2020/03/ffmpegfs-is-fuse-based-filesystem-for.html

Preparing release 2.3

Important changes in 2.3 (2021-01-XX)

* Feature: Added cue sheet support. If a file with cue extension is found with the same
  name as a media file, tracks defined in it will show up in a virtual directory.
* Feature: Issue #78: Duplicate ARTIST to ALBUMARTIST tag if empty
* Bugfix:

Preparing release 2.2

Important changes in 2.2 (2021-01-XX)

This is a maintenance release, bugfixes only.

* Bugfix: Issue #75: Fix crash when opening mp3 output with dolphin.
* Bugfix: Issue #70: Possible crash in Buffer::init: Should not assert if duration is 0
          (and thus segment count 0). Report internal error and go on.
* Bugfix: Issue #70: Do not set duration to 0 from cache but leave unchanged. Caused HLS
          transcoding to fail if more than one transcoder was concurrently started.
* Bugfix: Possible crash in transcoder_thread: Decoder object could have been used
          after being freed.
* Bugfix: Stupid blooper. WAV and AIFF size was always calculated for a mono file,
          thus for stereo files only half the correct size.
* Bugfix: Corrected documentation, "make checks" should read "make check", funny this
          went unnoticed for over 3 years...
* Bugfix: Issue #74: Album arts were only copied from MP3/4 sources. Removed restriction,
          if the input file contains an album art it will be copied to the target (if
          supported, of course, e.g., to mp3 or mp4. Ogg is not yet supported because
          embedding album arts in Ogg can only be done by an inofficial workaround).
* Bugfix: Issue #71:: Virtual directories were missing dot and dot-dot nodes.

Important changes in 2.1 (2020-12-14)
  
* Feature: Add BLURAY_VIDEO_FORMAT_2160P (UHD)
* Feature: Implemented in 1.7, removed experimental state for --win_smb_fix now.
           Windows seems to access the files on Samba drives starting at the last 64K segment